Closed Bug 1799394 Opened 2 years ago Closed 2 years ago

Minor issue: `Choose User Profile` dialog size changes(flickers)

Categories

(Toolkit :: Startup and Profile System, defect)

Firefox 108
Desktop
Windows 10
defect

Tracking

()

VERIFIED FIXED
108 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox106 --- unaffected
firefox107 --- unaffected
firefox108 --- verified

People

(Reporter: alice0775, Assigned: emilio)

References

(Regression)

Details

(Keywords: nightly-community, regression)

Attachments

(1 file)

Steps to reproduce:

  1. Start Nightly firefox.exe -p

Actual results:
Choose User Profile dialog flickers.
It will appear wider white window. Immediately after that, it becomes smaller correct size.
Screencast: https://youtu.be/EXjVgFQmJxY

Expected results:
The Choose User Profile dialog should be displayed in the correct size from the beginning without being resized.

Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=91cb545d28441b51d86fb426145a145a884b3841&tochange=c437eb5573746bf106fe635ae5227cc9b9e83e69

:emilio, since you are the author of the regressor, bug 1795224, could you take a look? Also, could you set the severity field?

For more information, please visit auto_nag documentation.

Flags: needinfo?(emilio)

I can't quite see the flickering, but I guess this is due to this code setting the initial size of the window based on the max-content size which is intentionally bigger than the final size...

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Flags: needinfo?(emilio)
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/3b36d9afc0a1 Make dialog sizing code consistent between C++ and JS. r=smaug
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 108 Branch
QA Whiteboard: [qa-108b-p2]

The issue was fixed. No longer reproduce on Nightly109.0a1(20221120214001)

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: