Bug 1799394 - Make dialog sizing code consistent between C++ and JS. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D161429